tests/baselines/reference/argumentsObjectIterator01_ES5.errors.txt
tests/cases/compiler/argumentsObjectIterator01_ES5.ts(4,21): error TS2545: Type 'IArguments' is not an array type or a string type or does not have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/compiler/argumentsObjectIterator01_ES5.ts (1 errors) ====
    
    function doubleAndReturnAsArray(x: number, y: number, z: number): [number, number, number] {
        let result = [];
        for (let arg of arguments) {
                        ~~~~~~~~~
!!! error TS2545: Type 'IArguments' is not an array type or a string type or does not have a '[Symbol.iterator]()' method that returns an iterator.
            result.push(arg + arg);
        }
        return <[any, any, any]>result;
    }